--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
+<!DOCTYPE html>
+<html lang = "en-US">
+
 <h1>Isabelle's Student Home Page</h1>
-<a href="#">GitHub Pages</a> | 
-<a href="#">mDrive</a> | 
-<a href="#">CSIS server</a> 
+
+<a href="https://turtlesmew.github.io/">GitHub Pages</a> | 
+<a href="http://webp.svsu.edu/~irjohns/">mDrive</a> | 
+<a href="https://csis.svsu.edu/~irjohns/">CSIS server</a> 
 <br />
 <br />
 <h2>Assignments</h2>
@@ -12,3 +16,5 @@
 <a href="#">Assignment 05</a><br />
 <a href="#">Assignment 06</a><br />
 <a href="#">Assignment 07</a><br />
+  
+  
