--- a/assignments/assignments01.html
+++ b/assignments/assignments01.html
@@ -3,5 +3,5 @@
 
 <title>Assignment 01</title>
 <h1>Assignment 01</h1>
-<img src="cats.jpg" />
+<img src="images/cats.jpg" />
 <img src=""https://via.placeholder.com/200" />
