--- a/assignments/assignments01.html
+++ b/assignments/assignments01.html
@@ -3,5 +3,5 @@
 
 <title>Assignment 01</title>
 <h1>Assignment 01</h1>
-<img src="turtlesmew.github.io/images/cats.jpg" />
+<img src="https://github.com/turtlesmew/turtlesmew.github.io/blob/master/images/cats.jpg" />
 <img src="https://via.placeholder.com/200" />
