--- a/assignments/assignments01.html
+++ b/assignments/assignments01.html
@@ -40,7 +40,10 @@ Aliquam pellentesque viverra nulla et vehicula. Nam placerat ante vestibulum tem
     </p>
     </div>
      
-    <div class="secPic">   
+    <div class="secPic">
+     <aside>
+      <img src="https://via.placeholder.com/200" alt ="placeholder" width="200" height="200"/>
+     </aside>
     <p>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas tincidunt tincidunt arcu, in placerat eros aliquet a. Integer tincidunt a tortor eu sagittis. In imperdiet scelerisque nunc nec bibendum. Maecenas mattis, dui vitae tempus sodales, quam erat ultricies erat, sit amet malesuada enim nibh eu libero. Vestibulum tincidunt arcu vel pretium laoreet. Vivamus id ante blandit, posuere nisi ac, semper libero. Maecenas mattis ultricies nisi cursus dapibus. Aliquam erat volutpat. Vestibulum sed orci scelerisque, sodales quam ut, auctor ligula. Suspendisse potenti. Etiam aliquam arcu a libero euismod auctor. Nullam id consequat lorem. Ut iaculis laoreet aliquet. Morbi lobortis eget nisi eu bibendum.
 Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque euismod elit tempus purus pellentesque imperdiet. In orci eros, consequat vitae aliquam at, tincidunt at velit. Nullam ut tristique quam. Mauris dapibus turpis velit, ut cursus est venenatis non. Sed vel orci ipsum. Praesent dignissim eu metus et consequat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Sed rutrum aliquet tortor, eu molestie mi maximus eget.
@@ -49,8 +52,6 @@ Curabitur hendrerit, diam quis venenatis pretium, mi justo rutrum nunc, eu vesti
 Duis sit amet tortor vitae ex molestie bibendum quis sed lectus. Ut vitae lacinia leo. Aenean massa velit, suscipit sit amet sollicitudin blandit, interdum id quam. Nulla tellus massa, porta vitae egestas ac, pellentesque at orci. Quisque non bibendum enim, eget tincidunt lorem. Sed eleifend turpis dignissim augue volutpat eleifend. Nulla sit amet volutpat tortor. Fusce sit amet condimentum ex. Integer dapibus tortor ipsum, vel tincidunt est ullamcorper sed. Etiam in facilisis metus. Fusce laoreet congue libero vitae accumsan. Integer eleifend tortor et odio vulputate aliquam. Duis leo justo, ultrices sit amet justo in, ultrices volutpat magna. Nulla at dolor a lacus finibus imperdiet.
 Aliquam pellentesque viverra nulla et vehicula. Nam placerat ante vestibulum tempor gravida. Aliquam quis faucibus dolor, sit amet vestibulum orci. Aenean orci mi, mollis sed metus sed, pharetra iaculis orci. Etiam mattis, lectus at laoreet sagittis, magna nunc mattis arcu, luctus ullamcorper sapien metus in sem. Vivamus hendrerit molestie orci, et tincidunt mi porta faucibus. Curabitur dictum ante id tellus tincidunt, luctus mattis ante fringilla. Pellentesque volutpat nulla at malesuada condimentum.
     </p>
-     
-     <img src="https://via.placeholder.com/200" alt ="placeholder" width="200" height="200"/>
     </div>
   </body>
 </html>
