--- a/assignments/assignments01.html
+++ b/assignments/assignments01.html
@@ -6,11 +6,6 @@
             margin: 20px; 
             text-align: center; 
         }
-   
-        img { 
-            float: left;  
-            margin: 5px; 
-        } 
         p { 
             text-align: justify; 
             font-size: 25px; 
@@ -27,7 +22,7 @@
   
   
   <body>
-    <div class="mainPic">
+    <div>
       <img src="/images/cats.jpg" alt ="cat icons" width = "350" height = "550" />
     
     <p>
@@ -40,7 +35,7 @@ Aliquam pellentesque viverra nulla et vehicula. Nam placerat ante vestibulum tem
     </p>
     </div>
      
-    <div class="secPic">
+    <div>
      <aside>
       <img src="https://via.placeholder.com/200" alt ="placeholder" width="200" height="200"/>
      </aside>
