--- a/assignments/assignments01.html
+++ b/assignments/assignments01.html
@@ -23,7 +23,7 @@
   
   <body>
     <div>
-      <img src="/images/cats.jpg" alt ="cat icons" style ="width:350px;height:550px;float:left" />
+      <img src="/images/cats.jpg" alt ="cat icons" style ="width:350px;height:550px;float:left;margin:50px" />
     
     <p>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas tincidunt tincidunt arcu, in placerat eros aliquet a. Integer tincidunt a tortor eu sagittis. In imperdiet scelerisque nunc nec bibendum. Maecenas mattis, dui vitae tempus sodales, quam erat ultricies erat, sit amet malesuada enim nibh eu libero. Vestibulum tincidunt arcu vel pretium laoreet. Vivamus id ante blandit, posuere nisi ac, semper libero. Maecenas mattis ultricies nisi cursus dapibus. Aliquam erat volutpat. Vestibulum sed orci scelerisque, sodales quam ut, auctor ligula. Suspendisse potenti. Etiam aliquam arcu a libero euismod auctor. Nullam id consequat lorem. Ut iaculis laoreet aliquet. Morbi lobortis eget nisi eu bibendum.
@@ -37,7 +37,7 @@ Aliquam pellentesque viverra nulla et vehicula. Nam placerat ante vestibulum tem
      
     <div>
      <aside>
-      <img src="https://via.placeholder.com/200" alt ="placeholder" style="width:200px;height:200px;float:right"/>
+      <img src="https://via.placeholder.com/200" alt ="placeholder" style="width:200px;height:200px;float:right;margin:50px"/>
      </aside>
     <p>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas tincidunt tincidunt arcu, in placerat eros aliquet a. Integer tincidunt a tortor eu sagittis. In imperdiet scelerisque nunc nec bibendum. Maecenas mattis, dui vitae tempus sodales, quam erat ultricies erat, sit amet malesuada enim nibh eu libero. Vestibulum tincidunt arcu vel pretium laoreet. Vivamus id ante blandit, posuere nisi ac, semper libero. Maecenas mattis ultricies nisi cursus dapibus. Aliquam erat volutpat. Vestibulum sed orci scelerisque, sodales quam ut, auctor ligula. Suspendisse potenti. Etiam aliquam arcu a libero euismod auctor. Nullam id consequat lorem. Ut iaculis laoreet aliquet. Morbi lobortis eget nisi eu bibendum.
