--- a/assignments/assignments01.html
+++ b/assignments/assignments01.html
@@ -6,6 +6,9 @@
             margin: 20px; 
             text-align: center; 
         }
+  hr.solid {
+  border-top: 3px solid #bbb;
+}
         p { 
             text-align: justify; 
             font-size: 20px; 
@@ -34,7 +37,7 @@ Duis sit amet tortor vitae ex molestie bibendum quis sed lectus. Ut vitae lacini
 Aliquam pellentesque viverra nulla et vehicula. Nam placerat ante vestibulum tempor gravida.
     </p>
     </div>
-     
+     <hr class="solid">
     <div>
      <aside>
       <img src="https://via.placeholder.com/200" alt ="placeholder" style="width:200px;height:200px;float:right;margin:35px"/>
