--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang = "en-US">
-
+<body style="background-color:#b19cd9;">
 <h1>Isabelle's Student Home Page</h1>
 
 <a href="https://turtlesmew.github.io/">GitHub Pages</a> | 
@@ -16,6 +16,6 @@
 <a href="#">Assignment 05</a><br />
 <a href="#">Assignment 06</a><br />
 <a href="#">Assignment 07</a><br />
-  
+  </body>
   
 </html>
