--- a/assignments/assignments01.html
+++ b/assignments/assignments01.html
@@ -24,7 +24,7 @@
  </nav>
   
   
-  <body style="background-color:#b19cd9;">
+  <body style="background-color:#C1E7E3;">
     <div>
       <img src="/images/cats.jpg" alt ="cat icons" style ="width:350px;height:550px;float:left;margin:35px" />
     
