--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang = "en-US">
-<body style="background-color:#b19cd9;">
+<body style="background-color:#C1BBDD;">
 <h1>Isabelle's Student Home Page</h1>
 
 <a href="https://turtlesmew.github.io/">GitHub Pages</a> | 
