--- a/assignments/assignments01.html
+++ b/assignments/assignments01.html
@@ -8,6 +8,7 @@
         }
   hr.solid {
   border-top: 3px solid #bbb;
+   background-color:#bfc0ee;
 }
         p { 
             text-align: justify; 
