--- a/assignments/assignments01.html
+++ b/assignments/assignments01.html
@@ -38,7 +38,7 @@ Duis sit amet tortor vitae ex molestie bibendum quis sed lectus. Ut vitae lacini
 Aliquam pellentesque viverra nulla et vehicula. Nam placerat ante vestibulum tempor gravida.
     </p>
     </div>
-     <hr class="solid">
+     <hr style="border-top: 3px solid #bbb;background-color:#bfc0ee;">
     <div>
      <aside>
       <img src="https://via.placeholder.com/200" alt ="placeholder" style="width:200px;height:200px;float:right;margin:35px"/>
