--- a/assignments/assignments01.html
+++ b/assignments/assignments01.html
@@ -4,12 +4,9 @@
  <style>
        body { 
             margin: 20px; 
-            text-align: center; 
+            text-align: center;
+            background-color:#bfc0ee;
         }
-  hr.solid {
-  border-top: 3px solid #bbb;
-   background-color:#bfc0ee;
-}
         p { 
             text-align: justify; 
             font-size: 20px; 
@@ -25,7 +22,7 @@
  </nav>
   
   
-  <body style="background-color:#bfc0ee;">
+  <body>
     <div>
       <img src="/images/cats.jpg" alt ="cat icons" style ="width:350px;height:550px;float:left;margin:35px" />
     
@@ -38,7 +35,7 @@ Duis sit amet tortor vitae ex molestie bibendum quis sed lectus. Ut vitae lacini
 Aliquam pellentesque viverra nulla et vehicula. Nam placerat ante vestibulum tempor gravida.
     </p>
     </div>
-     <hr style="height:2px;border-width:0;color:gray;background-color:gray">
+     <hr style="height:3px;border-width:0;color:gray;background-color:gray">
     <div>
      <aside>
       <img src="https://via.placeholder.com/200" alt ="placeholder" style="width:200px;height:200px;float:right;margin:35px"/>
