--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -25,15 +25,20 @@
   <body>
     <div>
       <img src="/images/cats.jpg" alt ="cat icons" style ="width:350px;height:550px;float:left;margin:5px 25px 15px 0px" />
-    
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sollicitudin, risus nec pellentesque porta, massa dui convallis velit, in facilisis eros lorem sit amet odio. Donec vulputate nisl sit amet neque hendrerit gravida. Sed sed libero vitae turpis lobortis eleifend. Integer ut ante tortor. Fusce eu erat purus. Quisque eget pretium velit, dapibus faucibus nulla. Sed a pharetra nibh. Fusce rutrum, felis quis tristique ultrices, nunc lorem consectetur lorem, in tempus est quam id leo. Curabitur at ex eget ipsum congue lobortis. In placerat dapibus erat ut lobortis. Mauris elit purus, facilisis pulvinar facilisis a, bibendum id tellus. Curabitur ligula nunc, venenatis aliquet mauris ac, facilisis finibus odio. Vivamus tincidunt pharetra est, vulputate suscipit arcu vestibulum convallis.
-    </p>
      <p>
-      Vestibulum consequat sodales lorem, a hendrerit nunc hendrerit ac. Cras sit amet volutpat leo, in accumsan arcu. Nulla quis vehicula velit. Donec libero ligula, rhoncus non risus at, vehicula iaculis magna. Mauris blandit magna non viverra interdum. Integer posuere orci vel velit interdum semper. Donec ut tincidunt ipsum. Aliquam tellus diam, faucibus et nulla eget, condimentum interdum magna. Pellentesque facilisis eget augue in tempus. Pellentesque iaculis diam vitae ligula vehicula tempus vel non lorem. Nullam ligula nulla, feugiat ac metus sed, consectetur maximus purus. Proin ut leo vitae sapien ullamcorper euismod et non enim.
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus non nulla et purus ultricies molestie. Cras maximus auctor arcu, quis aliquet magna pharetra a. Vivamus dapibus nec sem at eleifend. Proin et tincidunt augue, ut varius est. Nulla rutrum sapien a ante tempor, id pharetra dui pellentesque. Fusce viverra libero eget orci vestibulum iaculis. Maecenas sit amet egestas augue, sed scelerisque ante.
      </p>
      <p>
-      Nulla et rhoncus est, quis commodo velit. Quisque malesuada leo ut nisl sagittis, non rutrum est pharetra. Nullam vulputate dignissim nunc eget sollicitudin. Praesent pretium tincidunt varius. Aliquam ut sagittis risus. Nam at feugiat sem. Aenean non vulputate massa, non egestas nunc.
+      Pellentesque iaculis tristique ligula, ac laoreet justo mollis eu. Sed vel neque tristique purus posuere pretium. Curabitur vitae neque eget risus porta semper. Integer pharetra at mauris a efficitur. Nunc imperdiet risus nec ex auctor, vel semper risus scelerisque. Donec sapien nisi, laoreet sed semper eu, fermentum ut velit. Phasellus elementum dui vitae placerat ultricies.
+     </p>
+     <p>
+      Etiam sed massa vel ipsum fermentum fringilla a in lectus. Vestibulum porta eget augue vel scelerisque. Cras sagittis, leo et convallis imperdiet, nisi justo sollicitudin metus, a viverra turpis urna vel dui. In sodales at nibh ut malesuada. Integer vel massa lobortis, vehicula felis eu, dictum velit. Donec varius sagittis turpis id pellentesque. Aenean sed sapien vel leo auctor molestie eu vitae enim. Fusce et lobortis libero. Maecenas non cursus risus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+     </p>
+     <p>
+      Sed ultricies euismod nibh, vitae ornare mi viverra id. Vestibulum egestas turpis at maximus sollicitudin. Proin est turpis, cursus in commodo eget, fermentum nec turpis. Quisque mollis tortor eget enim semper, eget vehicula tellus aliquet. Morbi et purus dictum ante sagittis congue. Pellentesque rhoncus ante in urna pharetra imperdiet. Fusce molestie venenatis augue, vel placerat enim fermentum et. Phasellus dui erat, fringilla at quam eget, finibus placerat nulla. Nunc imperdiet eleifend nisl vel gravida. Curabitur nec posuere nibh. Vestibulum sed aliquet risus, sit amet semper lacus. Donec auctor neque ac metus tempor, eu bibendum neque ullamcorper. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Phasellus vitae justo nisi. Vestibulum vulputate ligula sit amet nisi interdum lobortis et eget mi. Pellentesque fringilla pellentesque accumsan.
+     </p>
+     <p>
+      Fusce at felis sed arcu vestibulum rutrum. Integer nec elementum diam, nec congue lacus. Nam vulputate id odio sit amet imperdiet. Proin elementum dolor at orci scelerisque tempus. Vestibulum eu enim ut purus tincidunt fermentum a vel urna. Donec volutpat nibh viverra lacinia vulputate. Aenean at augue nec enim viverra suscipit.
      </p>
     </div>
      <hr style="height:3px;border-width:0;color:gray;background-color:gray">
@@ -41,15 +46,21 @@
      <aside>
       <img src="https://via.placeholder.com/200" alt ="placeholder" style="width:200px;height:200px;float:right;margin:5px 0px 15px 25px"/>
      </aside>
-    <p>
-     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed venenatis tempus odio. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nunc laoreet, ex id eleifend fermentum, ligula nulla venenatis enim, vitae dapibus lacus ante id lorem. Nulla vitae dignissim massa. Sed lacus sem, faucibus eu convallis non, suscipit sit amet est. Curabitur posuere turpis quam, id feugiat nibh interdum sed. Nunc neque erat, venenatis eu nunc vel, tincidunt consequat est. Sed nec nulla rhoncus, tempus sem at, pulvinar nibh. Aliquam tempus sollicitudin massa id tincidunt. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Suspendisse hendrerit diam et tortor ultrices, ut accumsan dolor bibendum. Integer auctor neque sit amet luctus imperdiet. Duis sit amet lobortis nunc. Etiam lacinia tortor vestibulum, sodales est non, elementum purus. Integer eleifend tellus a blandit egestas. Mauris laoreet odio ut mattis ultrices.
-    </p>
      <p>
-      Suspendisse semper sed lorem vel mattis. Aliquam at egestas lacus. In tincidunt rutrum nibh ut interdum. Praesent eu iaculis risus, ut facilisis nulla. Quisque semper orci at purus vulputate congue. Aliquam tincidunt vel dui aliquet tristique. Aenean aliquam ac sem placerat rutrum. Nam tristique vitae leo sed condimentum. Proin placerat euismod magna, sit amet scelerisque magna mollis in. Fusce a efficitur orci. Nunc vitae ipsum sed magna ultrices euismod. Donec dignissim at odio pulvinar tempor. Ut vel lacinia dui, ut convallis neque. Ut luctus sodales posuere. Vestibulum dictum scelerisque malesuada. In quis ligula eget tellus semper dignissim.
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque viverra cursus orci, vitae pellentesque orci aliquet ut. Mauris vestibulum lacus sed ultricies accumsan. In viverra nunc velit, vel auctor arcu imperdiet vitae. Curabitur pulvinar ante eu hendrerit lacinia. Nunc eu ex id ligula posuere suscipit. Nam lectus lorem, porttitor id tincidunt vitae, ultrices vel tellus. Ut placerat id eros et tempus. Etiam eu ante in ligula commodo posuere. Donec placerat volutpat neque sit amet fringilla. In bibendum neque massa, eu suscipit metus ornare quis. Suspendisse potenti. Suspendisse placerat convallis dolor, vitae dictum nulla rutrum quis. Integer consequat tempor felis in convallis. Etiam mattis ornare ipsum id sagittis. Ut pharetra velit eget egestas aliquet.
      </p>
      <p>
-      Sed porttitor ipsum ut suscipit condimentum. Aenean dolor ex, commodo nec dui ac, maximus faucibus enim. Sed auctor, erat fermentum condimentum commodo, erat mauris lobortis neque, non ultrices urna sapien sed sapien. Vestibulum vitae metus orci. Vestibulum lacinia, arcu eget maximus tincidunt, ex velit commodo dolor, nec dignissim lectus nunc sed leo. Quisque eleifend justo eu eros elementum mattis. Donec in commodo quam, eget varius magna.
+      Fusce facilisis maximus diam nec mattis. Praesent velit ligula, congue sed massa eget, lacinia maximus tortor. Sed arcu augue, sollicitudin ac odio ac, volutpat pharetra augue. Etiam viverra bibendum metus, id dictum tortor commodo id. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent at mollis eros. Vivamus malesuada lacinia augue vitae convallis. Integer in augue porta, vestibulum eros quis, tincidunt libero. Proin eu gravida metus.
      </p>
+     <p>
+      Mauris vestibulum vulputate ex nec molestie. Donec fringilla gravida diam in tempus. Maecenas id ipsum sodales, facilisis enim vel, blandit lorem. Phasellus tincidunt purus faucibus orci finibus gravida. Curabitur aliquam lorem purus. Proin justo eros, sollicitudin a justo nec, porttitor ultrices tortor. Praesent consequat nulla vitae neque semper, sed mattis nibh congue. Nunc congue consectetur risus, non sagittis enim pulvinar eu.
+     </p>
+     <p>
+      Duis mattis molestie risus, in bibendum sapien gravida pharetra. Phasellus sollicitudin pulvinar massa, a sagittis erat congue in. Duis nec aliquam dolor. Aliquam erat volutpat. Suspendisse aliquet magna ornare, aliquet purus vitae, suscipit ipsum. Aenean tristique urna a sodales semper. Sed laoreet, felis eu luctus blandit, ante dolor dignissim ex, vel scelerisque ipsum ante eu justo. Fusce ultricies sed lorem nec ornare. Interdum et malesuada fames ac ante ipsum primis in faucibus. Cras et elementum augue.
+     </p>
+     <p>
+      Cras at diam nunc. Aenean efficitur vehicula nisi id tincidunt. Sed venenatis nibh laoreet arcu vulputate consectetur. Etiam et maximus ipsum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Integer nec tellus convallis, posuere urna sit amet, cursus ligula. Mauris non aliquet sapien.
+     </p>   
     </div>
   </body>
 </html>
