--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -38,6 +38,7 @@
      <aside>
       <img src="https://via.placeholder.com/200" alt ="placeholder" style="width:200px;height:200px;float:right;margin:5px 0px 15px 25px"/>
      </aside>
+     <h2>Ut rutrum et quam ac</h2>
      <p>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque viverra cursus orci, vitae pellentesque orci aliquet ut. Mauris vestibulum lacus sed ultricies accumsan. In viverra nunc velit, vel auctor arcu imperdiet vitae. Curabitur pulvinar ante eu hendrerit lacinia. Nunc eu ex id ligula posuere suscipit. Nam lectus lorem, porttitor id tincidunt vitae, ultrices vel tellus. Ut placerat id eros et tempus. Etiam eu ante in ligula commodo posuere. Donec placerat volutpat neque sit amet fringilla. In bibendum neque massa, eu suscipit metus ornare quis. Suspendisse potenti. Suspendisse placerat convallis dolor, vitae dictum nulla rutrum quis. Integer consequat tempor felis in convallis. Etiam mattis ornare ipsum id sagittis. Ut pharetra velit eget egestas aliquet.
       Fusce facilisis maximus diam nec mattis. Praesent velit ligula, congue sed massa eget, lacinia maximus tortor. Sed arcu augue, sollicitudin ac odio ac, volutpat pharetra augue. Etiam viverra bibendum metus, id dictum tortor commodo id. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent at mollis eros. Vivamus malesuada lacinia augue vitae convallis. Integer in augue porta, vestibulum eros quis, tincidunt libero. Proin eu gravida metus.
@@ -46,5 +47,20 @@
       Cras at diam nunc. Aenean efficitur vehicula nisi id tincidunt. Sed venenatis nibh laoreet arcu vulputate consectetur. Etiam et maximus ipsum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Integer nec tellus convallis, posuere urna sit amet, cursus ligula. Mauris non aliquet sapien.
      </p>   
     </div>
+   <hr style="height:3px;border-width:0;color:gray;background-color:gray">
+   <div>
+    <h3> Minimial HTML Example </h3>
+    <code style="background-color:#b9baf4">
+     &lt;!doctype html&gt;
+     <br>&lt;html lang=&quot;en&quot;&gt;
+     <br>&lt;head&gt;
+     <br>&lt;title&gt;Minimial HTML&lt;/title&gt;
+     <br>&lt;/head&gt;
+     <br>&lt;body&gt;
+     <br>&lt;p&gt;Hello, world&lt;/p&gt;
+     <br>&lt;/body&gt;
+     <br>&lt;/html&gt;
+    </code>
+   </div>
   </body>
 </html>
