--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -38,7 +38,7 @@
      <aside>
       <img src="https://via.placeholder.com/200" alt ="placeholder" style="width:200px;height:200px;float:right;margin:5px 0px 15px 25px"/>
      </aside>
-     <h2>Ut rutrum et quam ac</h2>
+     <h2 style="text-align:left">Ut rutrum et quam ac</h2>
      <p>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque viverra cursus orci, vitae pellentesque orci aliquet ut. Mauris vestibulum lacus sed ultricies accumsan. In viverra nunc velit, vel auctor arcu imperdiet vitae. Curabitur pulvinar ante eu hendrerit lacinia. Nunc eu ex id ligula posuere suscipit. Nam lectus lorem, porttitor id tincidunt vitae, ultrices vel tellus. Ut placerat id eros et tempus. Etiam eu ante in ligula commodo posuere. Donec placerat volutpat neque sit amet fringilla. In bibendum neque massa, eu suscipit metus ornare quis. Suspendisse potenti. Suspendisse placerat convallis dolor, vitae dictum nulla rutrum quis. Integer consequat tempor felis in convallis. Etiam mattis ornare ipsum id sagittis. Ut pharetra velit eget egestas aliquet.
       Fusce facilisis maximus diam nec mattis. Praesent velit ligula, congue sed massa eget, lacinia maximus tortor. Sed arcu augue, sollicitudin ac odio ac, volutpat pharetra augue. Etiam viverra bibendum metus, id dictum tortor commodo id. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent at mollis eros. Vivamus malesuada lacinia augue vitae convallis. Integer in augue porta, vestibulum eros quis, tincidunt libero. Proin eu gravida metus.
@@ -49,8 +49,9 @@
     </div>
    <hr style="height:3px;border-width:0;color:gray;background-color:gray">
    <div>
+    <div style="float:left; width: 33%;>
     <h3> Minimial HTML Example </h3>
-    <code style="background-color:#b9baf4">
+    <code style="background-color:#b9baf4;">
      &lt;!doctype html&gt;
      <br>&lt;html lang=&quot;en&quot;&gt;
      <br>&lt;head&gt;
@@ -61,6 +62,24 @@
      <br>&lt;/body&gt;
      <br>&lt;/html&gt;
     </code>
+    </div>
+    <div style="float:left; width: 33%;>
+     
+    </div>
+    <div style="float:left; width: 33%;>
+                <h5>Enter for your chance to win a brand new Honda Civic!</h5>
+       <form>
+                <label for="fname">First name:</label><br>
+  <input type="text" id="fname" name="fname" value=""><br>
+  <label for="lname">Last name:</label><br>
+  <input type="text" id="lname" name="lname" value=""><br>
+  <label for="num">Phone Numeber:</label><br>
+  <input type="text" id="num" name="lname" value="000-000-0000">
+ </form>
+    </div>       
    </div>
+   <hr style="height:3px;border-width:0;color:gray;background-color:gray">
+   <div>
+    <h6 Last updated: 9/13/20 11:00 EST </h6
   </body>
 </html>
