--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -64,7 +64,25 @@
     </code>
     </div>
     <div style="float:left; width: 33%;>
-     
+     <table>
+<tbody>
+<tr>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+</tr>
+</tbody>
+</table>
     </div>
     <div style="float:left; width: 33%;>
                 <h5>Enter for your chance to win a brand new Honda Civic!</h5>
@@ -80,6 +98,6 @@
    </div>
    <hr style="height:3px;border-width:0;color:gray;background-color:gray">
    <div>
-    <h6 Last updated: 9/13/20 11:00 EST </h6
+   <h6> Last updated: 9/13/20 11:00 EST </h6>
   </body>
 </html>
