--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -49,7 +49,7 @@
     </div>
    <hr style="height:3px;border-width:0;color:gray;background-color:gray">
    <div>
-    <div style="float:left; width: 33%;>
+    <div style="float:left; width: 33%;">
     <h3> Minimial HTML Example </h3>
     <code style="background-color:#b9baf4;">
      &lt;!doctype html&gt;
@@ -64,22 +64,22 @@
     </code>
     </div>
     <div style="float:left; width: 33%;>
-     <table>
+     <table style="width: 100%; border-color: black; height: 100%;" border="1">
 <tbody>
-<tr>
-<td>&nbsp;</td>
-<td>&nbsp;</td>
-<td>&nbsp;</td>
+<tr style="height: 21px;">
+<td style="height: 21px;">&nbsp;</td>
+<td style="height: 21px;">&nbsp;</td>
+<td style="height: 21px;">&nbsp;</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>&nbsp;</td>
-<td>&nbsp;</td>
+<tr style="height: 21px;">
+<td style="height: 21px;">&nbsp;</td>
+<td style="height: 21px;">&nbsp;</td>
+<td style="height: 21px;">&nbsp;</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>&nbsp;</td>
-<td>&nbsp;</td>
+<tr style="height: 21px;">
+<td style="height: 21px;">&nbsp;</td>
+<td style="height: 21px;">&nbsp;</td>
+<td style="height: 21px;">&nbsp;</td>
 </tr>
 </tbody>
 </table>
