--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -64,7 +64,7 @@
     </code>
     </div>
     <div style="float:left; width: 33%;>
-     <table style="width: 100%; border-color: black; height: 100%;" border="1">
+     <table style="width: 100%; border-color:#000000; height: 100%;" border="1">
 <tbody>
 <tr style="height: 21px;">
 <td style="height: 21px;">&nbsp;</td>
@@ -99,5 +99,6 @@
    <hr style="height:3px;border-width:0;color:gray;background-color:gray">
    <div>
    <h6> Last updated: 9/13/20 11:00 EST </h6>
+   </div>
   </body>
 </html>
