--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -91,13 +91,13 @@
   <input type="text" id="fname" name="fname" value=""><br>
   <label for="lname">Last name:</label><br>
   <input type="text" id="lname" name="lname" value=""><br>
-  <label for="num">Phone Numeber:</label><br>
+  <label for="num">Phone Number:</label><br>
   <input type="text" id="num" name="lname" value="000-000-0000">
  </form>
     </div>       
    </div>
-   <hr style="height:3px;border-width:0;color:gray;background-color:gray">
    <div>
+    <hr style="height:3px;border-width:0;color:gray;background-color:gray">
    <h6> Last updated: 9/13/20 11:00 EST </h6>
    </div>
   </body>
