--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -64,11 +64,12 @@
     </code>
     </div>
     <div style="float:left; width: 33%;>
+                <h4> Table </h4>
      <table style="width: 100%; border-color:#000000; height: 100%;" border="1">
 <tbody>
 <tr style="height: 21px;">
-<td style="height: 21px;">&nbsp;</td>
-<td style="height: 21px;">&nbsp;</td>
+<td style="height: 21px;">A;</td>
+<td style="height: 21px;">H;</td>
 <td style="height: 21px;">&nbsp;</td>
 </tr>
 <tr style="height: 21px;">
@@ -85,7 +86,7 @@
 </table>
     </div>
     <div style="float:left; width: 33%;>
-                <h5>Enter for your chance to win a brand new Honda Civic!</h5>
+            <h5>Enter for your chance to win a brand new Honda Civic!</h5>
        <form>
                 <label for="fname">First name:</label><br>
   <input type="text" id="fname" name="fname" value=""><br>
